import { describe, it, expect, vi, beforeAll } from 'vitest'
import { buildTheme, extractThemeData } from '../src/theme'
import chalk from 'chalk'
import { readFile } from 'fs/promises'
import { mkdirSync } from 'fs'
import { resolve } from 'pathe'
import { createNode } from '../../core/src/index'

beforeAll(() => {
  mkdirSync(resolve(process.cwd(), 'temp'), { recursive: true })
})

describe('buildTheme', () => {
  it('can generate a local theme', async () => {
    const consoleMock = vi
      .spyOn(console, 'log')
      .mockImplementation(() => undefined)
    await buildTheme({
      theme: './packages/cli/__tests__/mocks/localTheme.ts',
      outFile: 'temp/formkit.theme.ts',
      format: 'ts',
    })

    // Tailwind detection may log first, so we check that Locating message was called (not necessarily first)
    expect(consoleMock).toHaveBeenCalledWith(
      chalk.greenBright(
        'Locating ./packages/cli/__tests__/mocks/localTheme.ts...'
      )
    )
    const fileString = await readFile(
      resolve(process.cwd(), 'temp/formkit.theme.ts'),
      'utf-8'
    )
    expect(fileString).toMatchSnapshot()
  })

  it('can override variables in generated theme', async () => {
    await buildTheme({
      theme: './packages/cli/__tests__/mocks/localTheme.ts',
      outFile: 'temp/formkit.theme.ts',
      format: 'ts',
      variables: 'border=border-6,spacing=10',
    })
    const fileString = await readFile(
      resolve(process.cwd(), 'temp/formkit.theme.ts'),
      'utf-8'
    )
    expect(fileString).toMatchSnapshot()
  })

  it('returns the correct classes for a given input section', async () => {
    await buildTheme({
      theme: './packages/cli/__tests__/mocks/localTheme.ts',
      outFile: 'temp/formkit.theme.ts',
      format: 'ts',
      variables: 'spacing=5',
    })
    // @ts-ignore
    const { rootClasses } = await import(
      resolve(process.cwd(), 'temp/formkit.theme.ts')
    )
    const node = createNode({
      type: 'input',
      props: { type: 'text', rootClasses, family: 'text' },
    })

    // @ts-ignore
    expect(node.props.rootClasses!('outer', node)).toEqual({
      'border-green-300': true,
      'formkit-outer': true,
      'mb-5': true,
      'ml-80': true,
      'mr-10': true,
      'mt-2': true,
      'text-green-300': true,
    })
  })

  it('filters invalid and error state classes when the node state is not invalid', async () => {
    await buildTheme({
      theme: './packages/cli/__tests__/mocks/localTheme.ts',
      outFile: 'temp/formkit.invalid.theme.ts',
      format: 'ts',
    })
    // @ts-ignore
    const { rootClasses } = await import(
      resolve(process.cwd(), 'temp/formkit.invalid.theme.ts')
    )
    const validNode = createNode({
      type: 'input',
      props: { type: 'text', rootClasses, family: 'text' },
    })
    ;(validNode as any).context = {
      state: { invalid: false, errors: false },
    }

    const validClasses = rootClasses('input', validNode)
    expect(validClasses['group-data-[invalid]:border-red-500']).toBe(false)
    expect(validClasses['dark:group-data-[invalid]:ring-red-500']).toBe(false)
    expect(validClasses['group-data-[errors]:border-red-600']).toBe(false)

    const invalidNode = createNode({
      type: 'input',
      props: { type: 'text', rootClasses, family: 'text' },
    })
    ;(invalidNode as any).context = {
      state: { invalid: true, errors: false },
    }

    const invalidClasses = rootClasses('input', invalidNode)
    expect(invalidClasses['group-data-[invalid]:border-red-500']).toBe(true)
    expect(invalidClasses['dark:group-data-[invalid]:ring-red-500']).toBe(true)
    expect(invalidClasses['group-data-[errors]:border-red-600']).toBe(false)
  })
})

describe('extractThemeData', () => {
  it('can extract basic details about a given theme', async () => {
    await buildTheme({
      theme: './packages/cli/__tests__/mocks/localTheme.ts',
      outFile: 'temp/formkit.theme.ts',
      format: 'ts',
      variables: 'spacing=5',
    })
    const fileString = await readFile(
      resolve(process.cwd(), 'temp/formkit.theme.ts'),
      'utf-8'
    )
    const themeData = extractThemeData(fileString)
    expect(themeData).toEqual([
      'd160dc067f884513c65fd0a522f685f21e4ec9102c23261ac2c7a019b80110ac',
      'spacing=5',
      'simple',
    ])
  })
})
