// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildTheme > can generate a local theme 1`] = `
"import type { FormKitNode } from '@formkit/core'

/**
  * @privateRemarks
  * This file was generated by the FormKit CLI and should not be manually
  * edited unless you’d like to "eject" from the CLI’s ability to update it.
  *
  * @checksum - 638e3132d46c683422e7a3fc7381a6f4eb088ea3c076023f357bb645bfbf2a07
  * @variables - undefined
  * @theme - simple
  **/

 /**
  * This is the theme function itself, it should be imported and used as the
  * config.rootClasses function. For example:
  *
  * \`\`\`js
  * import { theme } from './formkit.theme'
  * import { defineFormKitConfig } from '@formkit/vue'
  *
  * export default defineFormKitConfig({
  *   config: {
  *     rootClasses: theme
  *   }
  * })
  * \`\`\`
  **/
 export function rootClasses (sectionName: string, node: FormKitNode): Record<string, boolean> {
   const key = \`\${node.props.type}__\${sectionName}\`
   const semanticKey = \`formkit-\${sectionName}\`
   const familyKey = node.props.family ? \`family:\${node.props.family}__\${sectionName}\` : ''
   const memoKey = \`\${key}__\${familyKey}\`
   if (!(memoKey in classes)) {
     const sectionClasses = classes[key] ?? globals[sectionName] ?? {}
     sectionClasses[semanticKey] = true
     if (familyKey in classes) {
       classes[memoKey] = { ...classes[familyKey],  ...sectionClasses }
     } else {
       classes[memoKey] = sectionClasses
     }
   }
   return stateScopedClasses(node, classes[memoKey] ?? { [semanticKey]: true })
 }

function stateScopedClasses (node: FormKitNode, sectionClasses: Record<string, boolean>): Record<string, boolean> {
  const invalid = node.context?.state.invalid
  const errors = node.context?.state.errors
  const shouldFilterInvalid = invalid === false
  const shouldFilterErrors = errors === false
  if (!shouldFilterInvalid && !shouldFilterErrors) return sectionClasses
  const filteredClasses = { ...sectionClasses }
  for (const className of Object.keys(filteredClasses)) {
    if (shouldFilterInvalid && isStateClass(className, 'invalid')) {
      filteredClasses[className] = false
    }
    if (shouldFilterErrors && isStateClass(className, 'errors')) {
      filteredClasses[className] = false
    }
  }
  return filteredClasses
}

function isStateClass (className: string, state: string): boolean {
  return (
    className.includes('group-data-[' + state) ||
    className.includes('formkit-' + state)
  )
}

/**
 * These classes have already been merged with globals using tailwind-merge
 * and are ready to be used directly in the theme.
 **/
const classes: Record<string, Record<string, boolean>> = {
  "family:text__outer": {
    "mb-64": true,
    "mt-2": true,
    "ml-80": true,
    "mr-10": true,
    "border-green-300": true,
    "text-green-300": true
  },
  "text__input": {
    "border-2": true,
    "rounded-md": true,
    "p-2": true,
    "border-slate-50": true,
    "group-data-[invalid]:border-red-500": true,
    "dark:group-data-[invalid]:ring-red-500": true,
    "group-data-[errors]:border-red-600": true
  },
  "select__inner": {
    "border-2": true,
    "rounded-md": true,
    "p-4": true
  },
  "select__outer": {
    "mt-2": true,
    "ml-80": true,
    "mr-10": true,
    "border-green-300": true,
    "mb-56": true
  }
};

/**
 * Globals are merged prior to generating this file — these are included for
 * any other non-matching inputs.
 **/
const globals: Record<string, Record<string, boolean>> = {
  "outer": {
    "mb-64": true,
    "mt-2": true,
    "ml-80": true,
    "mr-10": true,
    "border-green-300": true
  }
};
"
`;

exports[`buildTheme > can override variables in generated theme 1`] = `
"import type { FormKitNode } from '@formkit/core'

/**
  * @privateRemarks
  * This file was generated by the FormKit CLI and should not be manually
  * edited unless you’d like to "eject" from the CLI’s ability to update it.
  *
  * @checksum - 6b6824b47cf1bfbbfe18b3d4bcff6fc4d61ccfa9a5ac248a0bf9dc2b057192c8
  * @variables - border=border-6,spacing=10
  * @theme - simple
  **/

 /**
  * This is the theme function itself, it should be imported and used as the
  * config.rootClasses function. For example:
  *
  * \`\`\`js
  * import { theme } from './formkit.theme'
  * import { defineFormKitConfig } from '@formkit/vue'
  *
  * export default defineFormKitConfig({
  *   config: {
  *     rootClasses: theme
  *   }
  * })
  * \`\`\`
  **/
 export function rootClasses (sectionName: string, node: FormKitNode): Record<string, boolean> {
   const key = \`\${node.props.type}__\${sectionName}\`
   const semanticKey = \`formkit-\${sectionName}\`
   const familyKey = node.props.family ? \`family:\${node.props.family}__\${sectionName}\` : ''
   const memoKey = \`\${key}__\${familyKey}\`
   if (!(memoKey in classes)) {
     const sectionClasses = classes[key] ?? globals[sectionName] ?? {}
     sectionClasses[semanticKey] = true
     if (familyKey in classes) {
       classes[memoKey] = { ...classes[familyKey],  ...sectionClasses }
     } else {
       classes[memoKey] = sectionClasses
     }
   }
   return stateScopedClasses(node, classes[memoKey] ?? { [semanticKey]: true })
 }

function stateScopedClasses (node: FormKitNode, sectionClasses: Record<string, boolean>): Record<string, boolean> {
  const invalid = node.context?.state.invalid
  const errors = node.context?.state.errors
  const shouldFilterInvalid = invalid === false
  const shouldFilterErrors = errors === false
  if (!shouldFilterInvalid && !shouldFilterErrors) return sectionClasses
  const filteredClasses = { ...sectionClasses }
  for (const className of Object.keys(filteredClasses)) {
    if (shouldFilterInvalid && isStateClass(className, 'invalid')) {
      filteredClasses[className] = false
    }
    if (shouldFilterErrors && isStateClass(className, 'errors')) {
      filteredClasses[className] = false
    }
  }
  return filteredClasses
}

function isStateClass (className: string, state: string): boolean {
  return (
    className.includes('group-data-[' + state) ||
    className.includes('formkit-' + state)
  )
}

/**
 * These classes have already been merged with globals using tailwind-merge
 * and are ready to be used directly in the theme.
 **/
const classes: Record<string, Record<string, boolean>> = {
  "family:text__outer": {
    "mb-10": true,
    "mt-2": true,
    "ml-80": true,
    "mr-10": true,
    "border-green-300": true,
    "text-green-300": true
  },
  "text__input": {
    "border-6": true,
    "rounded-md": true,
    "p-2": true,
    "border-slate-50": true,
    "group-data-[invalid]:border-red-500": true,
    "dark:group-data-[invalid]:ring-red-500": true,
    "group-data-[errors]:border-red-600": true
  },
  "select__inner": {
    "border-6": true,
    "rounded-md": true,
    "p-4": true
  },
  "select__outer": {
    "mt-2": true,
    "ml-80": true,
    "mr-10": true,
    "border-green-300": true,
    "mb-8": true
  }
};

/**
 * Globals are merged prior to generating this file — these are included for
 * any other non-matching inputs.
 **/
const globals: Record<string, Record<string, boolean>> = {
  "outer": {
    "mb-10": true,
    "mt-2": true,
    "ml-80": true,
    "mr-10": true,
    "border-green-300": true
  }
};
"
`;
